# rasterizer-lib

./: CMakeLists.txt  README.md  example.cpp  example_april.cpp
Rasterizer/: CMakeLists.txt  Rasterizer.h
Rasterizer/include/: datatypes.h  def.h  generate.h  intervalization.h  rasterization.h  utils.h
Rasterizer/src/: def.cpp  generate.cpp  intervalization.cpp  rasterization.cpp  utils.cpp
